[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sap-api-accelerator-mcp"
version = "0.1.0"
description = "SAP Business Accelerator Hub MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.21.2",
]

[tool.setuptools]
py-modules = ["accelerator", "main"]
